--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
             </div>
         </div>
     </div>
+    <p class="footer"><a href="https://github.com/wattmeg/MW-weather-app">Open-source code</a> by Megan Watt</p>
     <script src="src/script.js"></script>
 </body>
 
