--- a/index.html
+++ b/index.html
@@ -69,25 +69,30 @@
                         <h4> Sun Rise <i class="fa-solid fa-sun"></i> Sun Set <i class="fa-solid fa-moon"></i> </h4>
                     </div>
                 </div>
-                <div class="row">
-                    <iframe style="border-radius:12px" class="spotify-embed"
-                        src="https://open.spotify.com/embed/playlist/37i9dQZF1DWURugcFfOfEH?utm_source=generator&theme=0"
-                        width="100%" height="80" frameBorder="0" allowfullscreen=""
-                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                </div>
+                <iframe style="border-radius:12px"
+                    src="https://open.spotify.com/embed/playlist/37i9dQZF1DWURugcFfOfEH?utm_source=generator"
+                    width="100%" height="80" frameBorder="0" allowfullscreen=""
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                    loading="lazy"></iframe>
             </div>
             <div class="col-4 future-days">
-                <p>Wednesday 20°/8° <i class="fa-solid fa-cloud"></i></p>
-                <p>Thursday 19°/8° <i class="fa-solid fa-cloud"></i></p>
-                <p>Friday 16°/7° <i class="fa-solid fa-cloud"></i></p>
-                <p>Saturday 16°/9° <i class="fa-solid fa-cloud"></i></p>
-                <p>Sunday 20°/14° <i class="fa-solid fa-cloud"></i></p>
-                <p>Monday 19°/12° <i class="fa-solid fa-cloud"></i></p>
+                <ul>
+                    <li class="forecast">
+                        Wednesday 20°/8° <i class="fa-solid fa-cloud"></i>
+                    </li>
+                    <li class="forecast">Thursday 19°/8° <i class="fa-solid fa-cloud"></i></li>
+                    <li class="forecast">Friday 16°/7° <i class="fa-solid fa-cloud"></i></li>
+                    <li class="forecast">Saturday 16°/9° <i class="fa-solid fa-cloud"></i></li>
+                    <li class="forecast">Sunday 20°/14° <i class="fa-solid fa-cloud"></i></li>
+                    <li class="forecast">Monday 19°/12° <i class="fa-solid fa-cloud"></i></li>
+                </ul>
             </div>
         </div>
+        <p class="footer"><a href="https://github.com/wattmeg/MW-weather-app" target="_blank">Open-source code</a> by
+            Megan
+            Watt</p>
     </div>
-    <p class="footer"><a href="https://github.com/wattmeg/MW-weather-app" target="_blank">Open-source code</a> by Megan
-        Watt</p>
+
     <script src="src/script.js"></script>
 </body>
 
