Relocated current weather icon

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 <body>
     <div class="container">
+
         <div class="row">
             <div class="col-8">
                 <div class="row">
@@ -40,6 +41,9 @@
                         <h1 id="city-display">London</h1>
                         <h6 id="date-and-time">Monday 16:00</h6>
                     </div>
+                    <div class="col-4 icon-now" id="icon-now">
+                        <h2><i class="fa-solid fa-cloud"></i></h2>
+                    </div>
                     <div class="col-4 temperature-now">
                         <span id="current-temp">19 </span>
                         <span>
@@ -48,9 +52,7 @@
                             <a href="#" class="temps" id="temp-fahrenheit-link">°F </a>
                         </span>
                     </div>
-                    <div class="col-4 icon-now" id="icon-now">
-                        <h2><i class="fa-solid fa-cloud"></i></h2>
-                    </div>
+
                 </div>
                 <div class="row middle-results-row results">
 
@@ -88,9 +90,11 @@
                 </ul>
             </div>
         </div>
-        <p class="footer"><a href="https://github.com/wattmeg/MW-weather-app" target="_blank">Open-source code</a> by
+        <p class="footer"><a href="https://github.com/wattmeg/MW-weather-app" target="_blank">Open-source code</a>
+            by
             Megan
             Watt</p>
+
     </div>
 
     <script src="src/script.js"></script>
