Updated time/date display function

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="row top-result-row">
                     <div class="col-4">
                         <h1 id="city-display">London</h1>
-                        <h6 id="date-and-time">Monday 16:00</h6>
+                        <h6>Last updated: <span id="date-and-time">Monday 16:00</span></h6>
                     </div>
                     <div class="col-4 icon-now" id="icon-now">
                         <h2><i class="fa-solid fa-cloud"></i></h2>
