Updated weather icon to show response

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                         <h1 id="city-display">London</h1>
                         <h6>Last updated: <span id="date-and-time">Monday 16:00</span></h6>
                     </div>
-                    <div class="col-4 icon-now" id="icon-now">
-                        <h2><i class="fa-solid fa-cloud"></i></h2>
+                    <div class="col-4 icon-now">
+                        <img id="icon-now" src="" />
                     </div>
                     <div class="col-4 temperature-now">
                         <span id="current-temp">19 </span>
