Updated celsius/fahrenheit conversion

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
                         <h6>Last updated: <span id="date-and-time">Monday 16:00</span></h6>
                     </div>
                     <div class="col-4 icon-now">
-                        <img id="icon-now" src="" />
+                        <img id="icon-now" src="" alt="" />
                     </div>
                     <div class="col-4 temperature-now">
                         <span id="current-temp">19 </span>
-                        <span>
-                            <a href="#" class="temps" id="temp-celsius-link">°C </a>
-                            <span class="temp-divider">|</span>
-                            <a href="#" class="temps" id="temp-fahrenheit-link">°F </a>
+                        <span class="temps">
+                            <a href="#" class="active" id="temp-celsius-link">C </a>
+                            |
+                            <a href="#" id="temp-fahrenheit-link">F </a>
                         </span>
                     </div>
 
