--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
                         <img id="icon-now" src="" alt="" />
                     </div>
                     <div class="col-4 temperature-now">
-                        <span id="current-temp">19 </span>
+                        <span id="current-temp">10</span>
                         <span class="temps">
-                            <a href="#" class="active" id="temp-celsius-link">C </a>
+                            <a href="#" class="active" id="temp-celsius-link">°C </a>
                             |
-                            <a href="#" id="temp-fahrenheit-link">F </a>
+                            <a href="#" id="temp-fahrenheit-link">°F </a>
                         </span>
                     </div>
 
