--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <h4> Sun Rise <i class="fa-solid fa-sun"></i> Sun Set <i class="fa-solid fa-moon"></i> </h4>
                     </div>
                 </div>
-                <iframe style="border-radius:12px"
+                <iframe style="border-radius:12px" id="spotify-playlist"
                     src="https://open.spotify.com/embed/playlist/37i9dQZF1DWURugcFfOfEH?utm_source=generator"
                     width="100%" height="80" frameBorder="0" allowfullscreen=""
                     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
