Added forecast into innerhtml
Day, min/max temp
HOWEVER need assistance with icons - only pulling one for whole week

--- a/index.html
+++ b/index.html
@@ -56,32 +56,31 @@
                 </div>
                 <div class="row middle-results-row results">
 
-                    <div class="col-6 wind" id="wind-speed">
-                        <h3> Wind </h3>
+                    <div class="col-md-4 wind" id="wind-speed">
+                        <h5> Wind </h5>
                     </div>
-                    <div class="col-6 humidity" id="humidity">
-                        <h3> Humidity </h3>
+                    <div class="col-4 humidity" id="humidity">
+                        <h5> Humidity </h5>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-6" id="temp-min-max">
-                        <h4> Temp High, Low </h4>
-                    </div>
-                    <div class="col-6 sun-rise-set">
-                        <h4> Sun Rise <i class="fa-solid fa-sun"></i> Sun Set <i class="fa-solid fa-moon"></i> </h4>
+                    <div class="col-4 highlow" id="temp-min-max">
+                        <h5> Temp High, Low </h5>
                     </div>
                 </div>
+
                 <iframe style="border-radius:12px" id="spotify-playlist"
                     src="https://open.spotify.com/embed/playlist/37i9dQZF1DWURugcFfOfEH?utm_source=generator"
                     width="100%" height="80" frameBorder="0" allowfullscreen=""
                     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
                     loading="lazy"></iframe>
             </div>
+
             <div class="col-4 future-days">
                 <ul id="forecast">
                 </ul>
             </div>
         </div>
+
+
         <p class="footer"><a href="https://github.com/wattmeg/MW-weather-app" target="_blank">Open-source code</a>
             by
             Megan
