Added linked in

--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
 
         <p class="footer"><a href="https://github.com/wattmeg/MW-weather-app" target="_blank">Open-source code</a>
             by
-            Megan
-            Watt</p>
+            <a href="https://www.linkedin.com/in/megan-watt-25732479/" target="_blank">Megan
+                Watt</a>
+        </p>
 
     </div>
 
