Added weather descriptor

--- a/index.html
+++ b/index.html
@@ -54,8 +54,12 @@
                     </div>
 
                 </div>
+                <div class="row description">
+                    <div class="col-12 description" id="description">
+                        <h5>Description</h5>
+                    </div>
+                </div>
                 <div class="row middle-results-row results">
-
                     <div class="col-md-4 wind" id="wind-speed">
                         <h5> Wind </h5>
                     </div>
