Amended local position forecast

--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
                     </div>
                 </div>
                 <div class="row top-result-row">
-                    <div class="col-4">
+                    <div class="col-5">
                         <h1 id="city-display">London</h1>
-                        <h6>Last updated: <span id="date-and-time">Monday 16:00</span></h6>
+                        <h5 class="description" id="description">Description</h5>
                     </div>
-                    <div class="col-4 icon-now">
+                    <div class="col-2 icon-now">
                         <img id="icon-now" src="" alt="" />
                     </div>
-                    <div class="col-4 temperature-now">
+                    <div class="col-5 temperature-now">
                         <span id="current-temp">10</span>
                         <span class="temps">
                             <a href="#" class="active" id="temp-celsius-link">°C </a>
@@ -54,9 +54,9 @@
                     </div>
 
                 </div>
-                <div class="row description">
-                    <div class="col-12 description" id="description">
-                        <h5>Description</h5>
+                <div class="row">
+                    <div class="col-12 ">
+                        <h6>Last updated: <span id="date-and-time">Monday 16:00</span></h6>
                     </div>
                 </div>
                 <div class="row middle-results-row results">
